# pdf_genius

./: .gitignore  Dashboard.py  README.md  app.py  pyproject.toml  requirements.txt  start.sh
pages/: 1_Merge_PDFs.py  2_Split_PDF.py  3_Cut_Pages.py  4_Rotate_PDF.py  5_Chat_with_PDF.py
src/config/: settings.py
src/utils/: pdf_utils.py
